fix scrollbar right padding and footer border bottom

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -396,6 +396,10 @@ button {
       z-index: -1;
       opacity: 0.4;
     }
+
+    &__image + .container {
+      padding-right: 0;
+    }
   }
 
   .banner {
@@ -420,6 +424,7 @@ button {
       color: rgba($white, 0.9);
       font-weight: 700;
       font-size: 2.2rem;
+      padding-right: 1.5rem;
     }
   }
 }
@@ -619,6 +624,16 @@ button {
     overflow-x: scroll;
     column-gap: 2rem;
   }
+
+  .actors::-webkit-scrollbar {
+    width: 20px;
+    height: 10px;
+  }
+
+  .actors::-webkit-scrollbar-thumb {
+    border-radius: 2rem;
+    background: linear-gradient(110.16deg, #13547a 2.37%, #80d0c7 96.77%);
+  }
 }
 
 .marketing {
@@ -806,8 +821,6 @@ footer {
     }
 
     &-item {
-      border-bottom: 2px solid rgba($white, 0.5);
-      border-radius: 2rem;
       padding: 2rem;
       width: 80%;
 
